## Process this file with automake to produce Makefile.in
sequence_test_data = sequence_test_1.fa.gz \
		sequence_test_2.fa.gz \
		sequence_test_3.fq.gz \
		sequence_test_4.fq.gz

ioform_test_data = hs37chrXtrunc.fa.gz \
		hs37l100i300e05q_trunc_nonam_1.fq.gz \
		hs37l100i300e05q_trunc_nonam_2.fq.gz \
		hs37l100i300e05q_trunc.bam \
		hs37l100i300e05q_trunc.sam.gz 

ouform_cigar_test_data = gen1l100i500e1_1.fq gen1l100i500e1_2.fq

sample_test_data = gen1l75i300e0_1.fq.gz gen1l75i300e0_2.fq.gz

cigar_test_data = cigar_ref.fa.gz cigar_read1.fq cigar_read2.fq

reference_genomes = contigs.fa.gz genome_1.fa.gz

multithread_data = contigs_i3k_1.fq.gz contigs_i3k_2.fq.gz

dist_data_DATA = ${sequence_test_data} \
		${reference_genomes} \
		${ioform_test_data} \
		${ouform_cigar_test_data} \
		${sample_test_data} \
		${cigar_test_data}
